objects/student__c.object
<CustomObject>
    <fields>
        <fullName>age__c</fullName>
        <label>age</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>branch1__c</fullName>
        <label>branch1</label>
        <referenceTo>branch1__c</referenceTo>
        <relationshipLabel>students</relationshipLabel>
        <relationshipName>students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>emal_id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>emal_id</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fee_paid__c</fullName>
        <label>fee paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fee_paid_onf__c</fullName>
        <label>fee paid on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>gender__c</fullName>
        <label>gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>male</fullName>
                </value>
                <value>
                    <fullName>female</fullName>
                </value>
                <value>
                    <fullName>others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>marks_score__c</fullName>
        <label>marks score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>phone_number__c</fullName>
        <label>phone number</label>
        <type>Phone</type>
    </fields>
    <label>student</label>
    <nameField>
        <label>student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>students</pluralLabel>
    <recordTypes>
        <fullName>user_1</fullName>
        <active>true</active>
        <label>user 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>user_2</fullName>
        <active>true</active>
        <label>user 2</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>phone</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISBLANK( phone_number__c ) 
,LEN( phone_number__c )   &lt;&gt; 10 ,
!ISNUMBER ( phone_number__c ) )</errorConditionFormula>
        <errorDisplayField>phone_number__c</errorDisplayField>
        <errorMessage>write phone number in a proper format</errorMessage>
    </validationRules>
</CustomObject>